# dpg_api_backend_rust

./: Cargo.toml
AWS/API Gateway/: diceware-password-generator-api-prod-oas30-apigateway.json
AWS/S3/dev/: webapp.html
AWS/S3/prod/: webapp.html
example_requests/: 5-space-capped.json  6-underscore-nocap.json
src/: config.rs  main.rs  word_list.rs
