[package]
name = "dpg_api_backend_rust"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
env_logger = "0.11.3"
lambda_http = "0.15.1"
log = "0.4.21"
phf = { version = "0.11", features = ["macros"] }
rand = "0.9.1"
tokio = { version = "1", features = ["macros"] }
